# cpp-kitchen

./: .gitignore  Readme.md
00.cpp-uniqueprt-demo/: main.cpp
03.cpp-signals/: main.cpp
04.cpp-with-curl-lib/: CMakeLists.txt
06.dependency-injection-cpp/: main.cpp
08.cpp-templates-with-interfaces/: main.cpp
09.cpp-adapter-pattern/: main.cpp
10.goatnative-inject-investigation/: Readme.md  main.cpp
12.cpp-relationship-between-classes/: Readme.md  aggregation.cpp  association.cpp  composition.cpp  inheritance.cpp
18.cpp-thereads-with-shared-memory/: IPerson.h  Person.cpp  Person.h  main.cpp
18.cpp-threads-with-shared-memory-and-callbacks/: IPerson.h  Person.cpp  Person.h  Readme.md  main.cpp
20.handler-factory/: Readme.md
abstract-factory/: main.cpp
cmake-create-lib/: Beer.cpp  main.cpp
cpp-IoC-and-DI/: Readme.md  build_source-code-with-IoC-and-DI.sh
cpp-api-handler-design/: Readme.md  build-shared-library-and-native-client.sh  build.sh
cpp-async-log/: Readme.md
cpp-builder-pattern/: main.cpp
cpp-casting-war/: README.md  Readme.md
cpp-detached-logger/: Readme.md  build.sh  run-valgrind.sh
cpp-device-tracker/: Readme.md  build.sh
cpp-di-container/: Readme.md  build.sh
cpp-dynamic-casting/: Readme.md  main.cpp
cpp-dynamic-casting-test/: main.cpp
cpp-dynamic-casting-with-multithreading/: Readme.md  main.cpp
cpp-forward-declaration/: Readme.md  build.sh  main.cpp
cpp-future-async/: main.cpp
cpp-hello-world-gRPC/: CMakeLists.txt  Readme.md  build.sh  generate-protoc-files.sh  setup-development-env.sh
cpp-hello-world-gRPC/proto/: greeter.proto
cpp-hello-world-gRPC/src/: client.cpp  server.cpp
cpp-hello-world-gRPC/src_auto_proto/: greeter.grpc.pb.cc  greeter.grpc.pb.h  greeter.pb.cc  greeter.pb.h
cpp-macro-compilation/: main.cpp
cpp-mediator/: Readme.md  build.sh
cpp-promise/: Readme.md  main.cpp
cpp-relationship-between-classes/: Readme.md  dependency.cpp
cpp-templates/: main.cpp
cpp-threads-with-shared-memory-and-callbacks/: CMakeLists.txt  Readme.md
cpp-threads-with-shared-memory-and-callbacks/api/: IMonitorApi.h
cpp-threads-with-shared-memory-and-callbacks/include/: Monitor.h
cpp-threads-with-shared-memory-and-callbacks/interfaces/: IPerson.h
cpp-threads-with-shared-memory-and-callbacks/src/: MonitorApi.cpp  Person.cpp
cpp-toString-interface/: README.md
cpp-traits/: Readme.md  build.sh
cpp-traits-functors/: Readme.md  build.sh
cpp-updater-thread-items/: Readme.md  build.sh
cpp-with-curl-lib/: CMakeLists.txt
cpp-with-curl-lib/Client/: main.cpp
goatnative-inject-investigation/: Injector.h
handler-factory/: CMakeLists.txt  (+1 more)
(+132 files in other folders)
